# imagerect

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  TESTING.md  imagerect.spec  imagerect_cli.spec  main.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  codeql.yml  release.yml  renovate.yml
assets/: icon.icns
cli/: __init__.py  commands_export.py  commands_inspect.py  commands_validate.py  common.py  main.py  runtime.py
core/: diagnose.py  export.py  export_sources.py  image.py  lens.py  lens_presets.json  logging_setup.py  pose.py  project.py  reference2d.py  reference3d.py  transform.py
core/writers/: __init__.py  jpeg_writer.py  png_writer.py  tiff_writer.py
docs/: README.md  RELEASE.md  USER_GUIDE.md
installer/: imagerect.desktop  imagerect.iss
promo/: README.md  channels.md
scripts/: build.sh  generate_icons.sh  regenerate_golden.py
tests/: conftest.py  golden_case.py  test_cli.py  test_clip_polygon.py  test_diagnose.py  test_export_engine.py  test_export_golden.py  test_homography.py  test_image.py  test_interaction.py  test_lens.py  test_lens_dialog.py  test_logging_setup.py  test_main_window_menus.py  test_mosaic.py  test_pose.py  test_project.py  test_project_panel.py  test_reference2d.py  test_reference2d_viewer_state.py  test_reference3d.py  test_reference3d_viewer.py  test_security_hardening.py  test_transform_properties.py  test_ui_flow.py  test_workspace_controller.py
tests/golden/: golden_output_100dpi.json  golden_output_100dpi.tiff  golden_output_300dpi.json  golden_output_300dpi.tiff  golden_output_jpeg.json  golden_project.imagerect.json  golden_reference.dxf
tests/sample_data/: 2026_016_Maerkplan_StGeorg_Berlin.dwg
ui/: export_dialog.py  image_viewer.py  lens_dialog.py  main_window.py  point_table.py  preview_dialog.py  project_hub_window.py  project_panel.py  reference2d_viewer.py  reference3d_viewer.py  review_workspace_window.py  smoke_test_runner.py  theme.py  three_d_workspace_window.py  workspace_controller.py
