[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "imagerect"
version = "0.2.0"
description = "Local-first desktop app for metric image rectification against 2D references"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "ezdxf>=1.1",
    "Pillow>=11.0",
    "tifffile>=2024.0",
    "imagecodecs>=2024.1",
    "typer>=0.16",
]

[project.optional-dependencies]
3d = [
    "open3d>=0.18",
    "pye57>=0.4",
    "trimesh>=4.0",
]
dev = [
    "bandit>=1.7",
    "hypothesis>=6.0",
    "pip-audit>=2.8",
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[project.scripts]
imagerect = "main:main"
imagerect-cli = "cli.main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["cli", "core", "core.writers", "ui"]

[tool.setuptools.package-data]
core = ["lens_presets.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["cv2.*", "ezdxf.*", "pye57.*", "open3d.*", "trimesh.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tifffile"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["ui.*", "core.reference2d"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
addopts = "--cov=core --cov-report=term-missing"
qt_api = "pyside6"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = ["B101"]
